k8s/frappe-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frappe-frontend
  namespace: frappe
spec:
  selector:
    app: frappe-frontend
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frappe-frontend
  namespace: frappe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frappe-frontend
  template:
    metadata:
      labels:
        app: frappe-frontend
    spec:
      securityContext:
        runAsUser: 101
      containers:
        - name: nginx
          image: artifactory.snifim.blroot/remote_registry_docker_io/nginx:alpine
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sites
              mountPath: /var/www/sites
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: sites
          persistentVolumeClaim:
            claimName: frappe-sites
        - name: nginx-config
          configMap:
            name: nginx-config
