k8s/frappe-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: frappe-websocket
  namespace: frappe
spec:
  selector:
    app: frappe-websocket
  ports:
    - port: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frappe-websocket
  namespace: frappe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frappe-websocket
  template:
    metadata:
      labels:
        app: frappe-websocket
    spec:
      containers:
        - name: websocket
          image: frappe-siud:latest
          command: ["node", "/home/frappe/frappe-bench/apps/frappe/socketio.js"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: sites
              mountPath: /home/frappe/frappe-bench/sites
      volumes:
        - name: sites
          persistentVolumeClaim:
            claimName: frappe-sites
