k8s/portal-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-ui
  namespace: frappe
spec:
  selector:
    app: portal-ui
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-ui
  namespace: frappe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-ui
  template:
    metadata:
      labels:
        app: portal-ui
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: portal-ui
          image: artifactory.snifim.blroot/remote_registry_docker_io/portal-ui:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 80
