k8s/ingress-tanzu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frappe-ingress
  namespace: frappe
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /portal
            pathType: Prefix
            backend:
              service:
                name: portal-ui
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frappe
                port:
                  number: 8080
